Ticket Management (VIP/Normal), Satisfaction Form, Employee/Counter, Application/Enterprise Admin

--- a/backend/.env
+++ b/backend/.env
@@ -17,3 +17,9 @@ WEBSOCKET_PORT=5000
 
 # Security
 BCRYPT_SALT_ROUNDS=12
+
+DB_HOST=127.0.0.1
+DB_PORT=3306
+DB_USER=pfe_user
+DB_PASSWORD=pfe_password123
+DB_NAME=bank_queue
