--- a/backend/package.json
+++ b/backend/package.json
@@ -25,5 +25,13 @@
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
-  }
+  },
+  "scripts": {
+  "start": "node src/server.js",
+  "dev": "nodemon src/server.js",
+  "server": "node src/server.js",
+  "update-schema": "node scripts/update-all-schemas.js",
+  "seed": "node src/scripts/seed-now.js",
+  "init-db": "node src/scripts/init-db.js"
+}
 }
